Implemented items/rescan
