# apis/api.yaml
@@ -305,6 +305,47 @@ paths:
             $ref: '#/definitions/Error'
 
 
+  /v1/items/rescan:
+    post:
+      summary: Re-scan N oldest items.
+      description: |
+
+        Re-scan the oldest items from a given source, to update their info or
+        remove them if they have been sold.
+
+        Arguments are a source name, and a 2 or 3 digit number indicating the
+        percentage of items, starting from the oldest first, that should be
+        re-scanned. For example: POST {'source': 'TRADERA', 'percentage': 60}
+        will re-scan 60% of all tradera announces still listed for sale,
+        starting from the oldest one.
+
+      parameters:
+        - in: body
+          name: body
+          description: How many items to rescan and from where.
+          required: true
+          schema:
+            $ref: "#/definitions/RescanData"
+
+      tags:
+        - Items
+      produces:
+        - application/json
+      x-bind-server: bdl.api.items.do_rescan_items
+      x-bind-client: rescan_items
+      x-decorate-server: pymacaron.auth.requires_auth
+      x-decorate-request: pymacaron.auth.add_auth
+      responses:
+        '200':
+          description: Ok
+          schema:
+            $ref: '#/definitions/Ok'
+        default:
+          description: Error
+          schema:
+            $ref: '#/definitions/Error'
+
+
   /v1/bdl/sitemap/update:
     get:
       summary: Launch a sitemap update.
@@ -332,6 +373,28 @@ paths:
 
 
 definitions:
+
+
+  RescanData:
+    type: object
+    description: How many items to rescan from which source.
+    properties:
+      index:
+        type: string
+        description: Which index thoes items belong to.
+        enum:
+          - BDL
+          - MODEL
+      source:
+        type: string
+        description: From which source?
+      percentage:
+        type: integer
+        description: An integer between 1 and 100 indicating the percentage of items currently listed to rescan.
+    required:
+      - index
+      - source
+      - percentage
 
 
   SearchedItems:
